--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -444,8 +444,8 @@ order_status | The current status of the order. A detailed list of order statuse
 ex_vat_total | The ex VAT total of the order
 vat | The amount of VAT payable on the order
 inc_vat_amount | The inc VAT total of the order
-order_lines | An array of JSOn objects detailing each line on the order
-status | The current status of the order line. A detailed list of order status is given below
+order_lines | An array of JSON objects detailing each line on the order
+status | The current status of the order line. A detailed list of order line statuses is given below
 description | The description of the product on this order line
 quantity | The quantity of product ordered on this line
 price | The ex VAT price of the product on this line
