--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -284,8 +284,8 @@ None required.
 
 Parameter | Description
 ----------|------------
-skus | An array of JSON objects containing stok information
-sku | The sku of the product
+skus | An array of JSON objects containing stock information
+sku | The SKU of the product
 description | The description of the product
 stock_level | The current level of free stock available for ordering
 price | The price of the product excluding VAT
@@ -364,7 +364,7 @@ SKU | The SKU of the product you wish to receive current information for.
 
 Parameter | Description
 ----------|------------
-sku | The sku of the product
+sku | The SKU of the product
 description | The description of the product
 stock_level | The current level of free stock available for ordering
 price | The price of the product excluding VAT
