--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -192,7 +192,7 @@ Parameter | Required | Description
 ----------|----------|------------
 email | yes | The username/email address for your API account
 current_password | yes | The current password for your account
-new_password | yes | The password which you wish to change to. Min length 16, max length 50
+new_password | yes | The password that you wish to change to. Min length 16, max length 50
 
 <aside class="warning">
 Changing your password will invalidate all tokens currently associated with your account, regardless of their current expiry dates.
