--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -38,7 +38,7 @@ For brevity, the authorization header will be omitted from the sidebar code exam
 
 ## Get Token
 
-> To authorize, use this code:
+> To authenticate to the API, use this code:
 
 ```shell
 curl --request POST \
